# napari-organoid-counter

./: .gitignore  LICENSE  README.md  diff_output.txt  post_install.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml  test_mmcv.yml
.napari/: DESCRIPTION.md
docs/: conf.py  index.rst
napari_organoid_counter/: __init__.py  _orgacount.py  _reader.py  _utils.py  _widget.py  analyze_timings.py  det_inferencer.py  napari.yaml  settings.py  test.py
napari_organoid_counter/_tests/: test_reader.py  test_widget.py
onnx/: original_notebook.ipynb
src/napari_organoid_counter/: __init__.py  _orgacount.py  _widget.py  napari.yaml
src/napari_organoid_counter/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
